# c-wasm-demo

./: .gitignore  CMakeLists.txt  README.md  build.py  dev.py
aulib-wasm/include/: aulib_wasm.h
aulib-wasm/src/: format.c
public/: index.html
runtime/: wasm_loader.js
src/: anim.h  ball.c  ball.h  colors.h  counter.c  counter.h  keys.h  main.c  range.c  range.h  snake.c  snake.h  wasm.h
